@@ -2,8 +2,7 @@ package com.midorlo.k12.web.rest;
 
 import com.midorlo.k12.service.UserService;
 import com.midorlo.k12.service.dto.UserDTO;
-import java.util.*;
-import java.util.Collections;
+import com.midorlo.k12.web.util.PaginationUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
@@ -12,17 +11,19 @@ import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-import com.midorlo.k12.web.util.PaginationUtil;
+
+import java.util.List;
 
 @RestController
 @RequestMapping("/api")
 public class PublicUserResource {
 
-    private static final List<String> ALLOWED_ORDERED_PROPERTIES = Collections.unmodifiableList(
-        Arrays.asList("id", "login", "firstName", "lastName", "email", "activated", "langKey")
-    );
+    private static final List<String> ALLOWED_ORDERED_PROPERTIES = List.of("id", "login", "firstName", "lastName",
+                                                                           "email", "activated", "langKey");
 
     private final Logger log = LoggerFactory.getLogger(PublicUserResource.class);
 
